feat: implement getAllEmployees api, with successful tests